# local-router

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  install-dev.sh  production-check.sh  pyproject.toml  router.sh  run-dev.sh  test-dev.sh  test-docker.sh
config/: config.docker.yaml  dev.yaml
docs/: run-public-api.md
local_router/: __init__.py  api.py  auth.py  catalog.py  cli.py  config.py  logging.py  memory.py  scheduler.py  validation.py
local_router/backends/: __init__.py  base.py  litert.py  llama_cpp.py  ollama.py
local_router/integrations/: opencode.py
minimal/: README.md  api_server.py  gguf_engine.py  run_server.sh  setup_ip_nginx.sh  setup_server.sh
minimal/package/: README.md  build_windows.ps1  installer.iss  requirements.txt  run_dev_windows.ps1  tray_app.py
models/: catalog.yaml
tests/: test_catalog_memory_auth.py  test_cli_config.py  test_llama_cpp_backend.py  test_opencode_config.py  test_validation.py
tests/smoke/: openai_smoke.py
